experiement_output/error_log/nondex-buddhikasemasinghe-spring-fluxify.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1050/wd/NonDex-plugin-test/github.com/buddhikasemasinghe/spring-fluxify/src/main/java/com/buddhika/springfluxify/SpringFluxifyApplication.java:24: error: constructor Product in class Product cannot be applied to given types;
						new Product(1L, "Toyota","2001", "Rav4", new BigDecimal(900000)),
						^
  required: no arguments
  found: long,String,String,String,BigDecimal
  reason: actual and formal argument lists differ in length
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1050/wd/NonDex-plugin-test/github.com/buddhikasemasinghe/spring-fluxify/src/main/java/com/buddhika/springfluxify/SpringFluxifyApplication.java:25: error: constructor Product in class Product cannot be applied to given types;
						new Product(2L, "Toyota","2015", "Camry", new BigDecimal(448282)),
						^
  required: no arguments
  found: long,String,String,String,BigDecimal
  reason: actual and formal argument lists differ in length
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1050/wd/NonDex-plugin-test/github.com/buddhikasemasinghe/spring-fluxify/src/main/java/com/buddhika/springfluxify/SpringFluxifyApplication.java:26: error: constructor Product in class Product cannot be applied to given types;
						new Product(3L, "Honda","1999", "HRV", new BigDecimal(4858272)),
						^
  required: no arguments
  found: long,String,String,String,BigDecimal
  reason: actual and formal argument lists differ in length
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1050/wd/NonDex-plugin-test/github.com/buddhikasemasinghe/spring-fluxify/src/main/java/com/buddhika/springfluxify/SpringFluxifyApplication.java:27: error: constructor Product in class Product cannot be applied to given types;
						new Product(4L, "Honda","2017", "CRV", new BigDecimal(3848283)),
						^
  required: no arguments
  found: long,String,String,String,BigDecimal
  reason: actual and formal argument lists differ in length
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1050/wd/NonDex-plugin-test/github.com/buddhikasemasinghe/spring-fluxify/src/main/java/com/buddhika/springfluxify/SpringFluxifyApplication.java:28: error: constructor Product in class Product cannot be applied to given types;
						new Product(5L, "Nissan","2005", "Patrol", new BigDecimal(4828283)),
						^
  required: no arguments
  found: long,String,String,String,BigDecimal
  reason: actual and formal argument lists differ in length
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1050/wd/NonDex-plugin-test/github.com/buddhikasemasinghe/spring-fluxify/src/main/java/com/buddhika/springfluxify/SpringFluxifyApplication.java:29: error: constructor Product in class Product cannot be applied to given types;
						new Product(6L, "Nissan","2018", "XTrail", new BigDecimal(48282938)),
						^
  required: no arguments
  found: long,String,String,String,BigDecimal
  reason: actual and formal argument lists differ in length
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1050/wd/NonDex-plugin-test/github.com/buddhikasemasinghe/spring-fluxify/src/main/java/com/buddhika/springfluxify/SpringFluxifyApplication.java:30: error: constructor Product in class Product cannot be applied to given types;
						new Product(7L, "Mazda","1983", "CX5", new BigDecimal(3883828)),
						^
  required: no arguments
  found: long,String,String,String,BigDecimal
  reason: actual and formal argument lists differ in length
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1050/wd/NonDex-plugin-test/github.com/buddhikasemasinghe/spring-fluxify/src/main/java/com/buddhika/springfluxify/SpringFluxifyApplication.java:31: error: constructor Product in class Product cannot be applied to given types;
						new Product(8L, "Mazda","1016", "Mazda3", new BigDecimal(5909999))
						^
  required: no arguments
  found: long,String,String,String,BigDecimal
  reason: actual and formal argument lists differ in length
8 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 7s
